--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 		</a>
 
 		<nav>
-			<a href="https://medium.com/@oceanhauls">Blog</a>
-			<a href="https://www.instagram.com/oceanhaul/">Instagram</a>
+			<a href="https://medium.com/@oceanhauls" target="_blank">Blog</a>
+			<a href="https://www.instagram.com/oceanhaul/"target="_blank">Instagram</a>
 			<!-- <a href="about.html">About</a> -->
 
 		</nav>
