--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Ocean Haul</title>
+	<title>Oceans Haul</title>
 	<meta name="viewport" content="width=device-width">
 	<!-- Compressed Foundations CSS -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.0/css/foundation.min.css">
+
+	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Abril+Fatface">
 
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
@@ -30,7 +32,7 @@
 	<div class="tagline">
 
 		<h1>Ocean Haul</h1>
-		<p>Rubbish, rubbish, rubbish everywhere.....</p>
+		<p>Beach Clean up</p>
 		<a class="button btn-header" target="_blank" href="mailto:oceanhauls@gmail.com.com?subject=Hello there!">Say hello</a>
 
 	</div>
@@ -38,26 +40,25 @@
 	<div id="company-logo">
 
 		
-		<!-- <ul class="company-link">
+		<ul class="company-link">
 
 			<li class="company-link">
-				<a target="_blank" href="http://www.fiu.edu/"><img id="FIU" src="images/logo-fiu.png" alt="FIU" title="FIU"></a>
-			</li>
+<!-- 				<a target="_blank" href="http://www.fiu.edu/"><img id="FIU" src="images/logo-fiu.png" alt="FIU" title="FIU"></a>
+ -->			</li>
 
 
 			</li>
-		</ul> -->
+		</ul>
 		
 	</div>
 
-  	<!-- MAIN CONTENT-->
   	<main>
 
-	  	<!-- <section id="about">
+	  	<section id="about">
 
 	  		<div class="row">
 	  			<div class="small-12 small-centered">
-					<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+					<p class="body-dark"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
 	  			</div>
 	  		</div>
 
@@ -101,36 +102,32 @@
 	  		<div class="row">
 	  			<div class="small-12 medium-12 large-4 columns">
 					<h1 class="header-black">
-						TITLE NAME
+						Title
 					</h1>
 				</div>
 	  			<div class="small-12 medium-6 large-4 columns">
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					<p class="body-dark">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 					</p>
 				</div>
 				<div class="small-12 medium-6 large-4 columns">
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					<p class="body-dark">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
 					</p>
 				</div>
 			</div>
 		</section>
 
-		<section id="quote">
+		<!-- <section id="quote">
 			<div class="row">
 	  			<div class="small-12 small-centered">
 					<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 					</p>
 				</div>
 			</div>
-	  	</section>
-
-	  <! 	<section id="say-hello-page">
-			<h1 class="header-black">Say Hello</h1>
-			<hr>
-			<p>maitedalila (at) gmail.com</p>
 	  	</section> -->
+
+	
 <!-- 
 		<section id="about">
 			<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
