copy / font change

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 	<!-- Compressed Foundations CSS -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.0/css/foundation.min.css">
 
-	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Abril+Fatface">
 
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
@@ -32,25 +31,25 @@
 	<div class="tagline">
 
 		<h1>Ocean Haul</h1>
-		<p>Beach Clean up</p>
+		<p>Challenge</p>
 		<a class="button btn-header" target="_blank" href="mailto:oceanhauls@gmail.com.com?subject=Hello there!">Say hello</a>
 
 	</div>
 
-	<div id="company-logo">
+	<!-- <div id="company-logo">
 
 		
 		<ul class="company-link">
 
 			<li class="company-link">
-<!-- 				<a target="_blank" href="http://www.fiu.edu/"><img id="FIU" src="images/logo-fiu.png" alt="FIU" title="FIU"></a>
- -->			</li>
+				<a target="_blank" href="http://www.fiu.edu/"><img id="FIU" src="images/logo-fiu.png" alt="FIU" title="FIU"></a>
+			</li>
 
 
 			</li>
 		</ul>
 		
-	</div>
+	</div> -->
 
   	<main>
 
@@ -58,14 +57,16 @@
 
 	  		<div class="row">
 	  			<div class="small-12 small-centered">
-					<p class="body-dark"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+					<h1 class="header-black"> How much waste can you find in the ocean? </h1>
+					<br>
+					<p class="body-dark">  Share it on social media <br> (then, obvoiusly dispose of it) <br>#oceanhaul   </p>
 	  			</div>
 	  		</div>
 
 		</section>
 
 		<section id="service-page">
-			<h1 class="header-black">Section</h1>
+			<h1 class="service-title">What you'll find?</h1>
 
 			<hr>
 
@@ -73,24 +74,24 @@
 		  		<div class="small-12 medium-6 large-4 columns">
 		  			<div class="service">
 		  				<img id="#" src="images/service.png" alt="#" title="#">
-		  				<h3>Title</h3>
-		  				<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+		  				<h3>Bottles </h3>
+		  				<p> Americans toss 60 million water bottles daily, which is nearly 700 each minute.</p>
 		  			</div>
 		  		</div>
 
 		  		<div class="small-12 medium-6 large-4 columns">
 		  			<div class="service">
 		  				<img id="#" src="images/service.png" alt="#" title="#">
-		  				<h3>Title</h3>
-		  				<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+		  				<h3>Plastic Bags</h3>
+		  				<p> Americans use 500 plastic bags per capita each year. Such bags make up the second most common type of garbage found on beaches. </p>
 		  			</div>
 		  		</div>
 
 		  		<div class="small-12 medium-6 large-4 columns end">
 		  			<div class="service">
 		  				<img id="#" src="images/service.png" alt="#" title="#">
-		  				<h3>Title</h3>
-		  				<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+		  				<h3>Random shit...</h3>
+		  				<p>American throws away more than 7 pounds of garbage a day. That's 102 tons in a lifetime, more than any other populations on Earth.</p>
 		  			</div>
 		  		</div>
 	  		</div>
