copy change / social media icons

--- a/index.html
+++ b/index.html
@@ -99,41 +99,33 @@
 
 
 
-	  	<section id="text-column">
+	 <!--  	<section id="text-column">
 	  		<div class="row">
 	  			<div class="small-12 medium-12 large-4 columns">
 					<h1 class="header-black">
-						Title
+						About
 					</h1>
 				</div>
 	  			<div class="small-12 medium-6 large-4 columns">
 					<p class="body-dark">
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+						Founded in 2017
 					</p>
 				</div>
 				<div class="small-12 medium-6 large-4 columns">
 					<p class="body-dark">
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+						Started in Miami, FL
 					</p>
 				</div>
 			</div>
-		</section>
+		</section> -->
 
-		<!-- <section id="quote">
-			<div class="row">
-	  			<div class="small-12 small-centered">
-					<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-					</p>
-				</div>
-			</div>
-	  	</section> -->
+
 
 	
-<!-- 
-		<section id="about">
-			<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-			<a class="button" target="_blank" href="mailto:conqueryourcareer@gmail.com.com?subject=I'm interested in learning more about Acing The Interview.">BUTTON</a>
-		</section> -->
+	<section id="about">
+			<p class="body-dark">Read our blog and join us on our journey</p>
+			<a class="button" target="_blank" href="https://medium.com/@oceanhauls">Read blog</a>
+		</section>
 
 		<div id="social-media"> 
 
