--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 		<h1>Ocean Haul</h1>
 		<p>Challenge</p>
-		<a class="button btn-header" target="_blank" href="mailto:oceanhauls@gmail.com.com?subject=Hello there!">Say hello</a>
+		<a class="button" target="_blank" href="https://medium.com/@oceanhauls">Read blog</a>
 
 	</div>
 
