--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	  			<div class="small-12 small-centered">
 					<h1 class="header-black"> How much waste can you find in the ocean? </h1>
 					<br>
-					<p class="body-dark">  Share it on social media <br> (then, obvoiusly dispose of it) <br>#oceanhaul   </p>
+					<p class="body-dark"> Share it on social media and dispose of it. <br> #oceanhaul </p>
 	  			</div>
 	  		</div>
 
@@ -123,7 +123,7 @@
 
 	
 	<section id="about">
-			<p class="body-dark">Read our blog and join us on our journey</p>
+			<h1 class="header-black">Join us on our journey....</h1>
 			<a class="button" target="_blank" href="https://medium.com/@oceanhauls">Read blog</a>
 		</section>
 
