--- a/about.html
+++ b/about.html
@@ -32,6 +32,9 @@
 			<h1>Headline</h1>
 		</div>
 
+
+
+
 		<section>
 	  		<div class="row">
 	  			<div class="small-12 small-centered">
@@ -58,6 +61,39 @@
 				</div>
 			</div>
 		</div>
+
+
+		<section id="service-page">
+			<h1 class="service-title">What you'll find?</h1>
+
+			<hr>
+
+			<div class="row">
+		  		<div class="small-12 medium-6 large-4 columns">
+		  			<div class="service">
+		  				<img id="#" src="images/service.png" alt="#" title="#">
+		  				<h3>Bottles </h3>
+		  				<p> Americans toss 60 million water bottles daily, which is nearly 700 each minute.</p>
+		  			</div>
+		  		</div>
+
+		  		<div class="small-12 medium-6 large-4 columns">
+		  			<div class="service">
+		  				<img id="#" src="images/service.png" alt="#" title="#">
+		  				<h3>Plastic Bags</h3>
+		  				<p> Americans use 500 plastic bags per capita each year. Such bags make up the second most common type of garbage found on beaches. </p>
+		  			</div>
+		  		</div>
+
+		  		<div class="small-12 medium-6 large-4 columns end">
+		  			<div class="service">
+		  				<img id="#" src="images/service.png" alt="#" title="#">
+		  				<h3>Random shit...</h3>
+		  				<p>American throws away more than 7 pounds of garbage a day. That's 102 tons in a lifetime, more than any other populations on Earth.</p>
+		  			</div>
+		  		</div>
+	  		</div>
+		</section>
 
 	  	<section id="text-column">
 	  		<div class="row">
