--- a/index.html
+++ b/index.html
@@ -59,14 +59,15 @@
 	  			<div class="small-12 small-centered">
 					<h1 class="header-black"> How much waste can you find in the ocean? </h1>
 					<br>
-					<p class="body-dark"> Share it on social media and dispose of it. <br> #oceanhaul </p>
+					<p class="body-dark"> Share it on social media<br> #oceanhaul </p>
 	  			</div>
 	  		</div>
 
 		</section>
 
+
 		<section id="service-page">
-			<h1 class="service-title">What you'll find?</h1>
+			<h1 class="service-title">How does it work?</h1>
 
 			<hr>
 
@@ -74,28 +75,30 @@
 		  		<div class="small-12 medium-6 large-4 columns">
 		  			<div class="service">
 		  				<img id="#" src="images/service.png" alt="#" title="#">
-		  				<h3>Bottles </h3>
-		  				<p> Americans toss 60 million water bottles daily, which is nearly 700 each minute.</p>
+		  				<h3>1. Pick up litter</h3>
+		  				<p> When you got to the beach or particpate in beach sports pick up the litter your find. It is really that simple. </p>
 		  			</div>
 		  		</div>
 
 		  		<div class="small-12 medium-6 large-4 columns">
 		  			<div class="service">
 		  				<img id="#" src="images/service.png" alt="#" title="#">
-		  				<h3>Plastic Bags</h3>
-		  				<p> Americans use 500 plastic bags per capita each year. Such bags make up the second most common type of garbage found on beaches. </p>
+		  				<h3>2. Share it</h3>
+		  				<p> Share the insane things you find using hashtag <b> #OceanHaul</b> and throw in a tag of the brand to spice it up</p>
 		  			</div>
 		  		</div>
 
 		  		<div class="small-12 medium-6 large-4 columns end">
 		  			<div class="service">
 		  				<img id="#" src="images/service.png" alt="#" title="#">
-		  				<h3>Random shit...</h3>
-		  				<p>American throws away more than 7 pounds of garbage a day. That's 102 tons in a lifetime, more than any other populations on Earth.</p>
+		  				<h3>3. Dispose of it.</h3>
+		  				<p>Find a bin or take the extra step and recycle it. Easy.</p>
 		  			</div>
 		  		</div>
 	  		</div>
 		</section>
+
+		
 
 
 
@@ -123,7 +126,8 @@
 
 	
 	<section id="about">
-			<h1 class="header-black">Join us on our journey....</h1>
+			<h1 class="header-black">Join the challenge.</h1>
+			<p class="body-dark"> Anytime. It is not a fad. <br> #OceanHaul  </p>
 			<a class="button" target="_blank" href="https://medium.com/@oceanhauls">Read blog</a>
 		</section>
 
