--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Oceans Haul</title>
+	<title>#Oceans Haul</title>
 	<meta name="viewport" content="width=device-width">
 	<!-- Compressed Foundations CSS -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.0/css/foundation.min.css">
@@ -30,7 +30,7 @@
 
 	<div class="tagline">
 
-		<h1>Ocean Haul</h1>
+		<h1>#OceanHaul</h1>
 		<p>Challenge</p>
 		<a class="button" target="_blank" href="https://medium.com/@oceanhauls">Read blog</a>
 
@@ -57,9 +57,9 @@
 
 	  		<div class="row">
 	  			<div class="small-12 small-centered">
-					<h1 class="header-black"> How much waste can you find in the ocean? </h1>
+					<h1 class="header-black"> How much waste can you find on the beach? </h1>
 					<br>
-					<p class="body-dark"> Share it on social media<br> #oceanhaul </p>
+					<p class="body-dark"> Share it on social media<br> <b>#oceanhaul</b> </p>
 	  			</div>
 	  		</div>
 
@@ -76,7 +76,7 @@
 		  			<div class="service">
 		  				<img id="#" src="images/service.png" alt="#" title="#">
 		  				<h3>1. Pick up litter</h3>
-		  				<p> When you got to the beach or particpate in beach sports pick up the litter your find. It is really that simple. </p>
+		  				<p> When you go to the beach or particpate in beach sports pick up the litter your find. <br> It is really that simple. </p>
 		  			</div>
 		  		</div>
 
@@ -84,7 +84,7 @@
 		  			<div class="service">
 		  				<img id="#" src="images/service.png" alt="#" title="#">
 		  				<h3>2. Share it</h3>
-		  				<p> Share the insane things you find using hashtag <b> #OceanHaul</b> and throw in a tag of the brand to spice it up</p>
+		  				<p> Share the insane things you find using the hashtag #OceanHaul.  Get creative and spice it up.</p>
 		  			</div>
 		  		</div>
 
@@ -127,7 +127,7 @@
 	
 	<section id="about">
 			<h1 class="header-black">Join the challenge.</h1>
-			<p class="body-dark"> Anytime. It is not a fad. <br> #OceanHaul  </p>
+			<p class="body-dark"> We promise. It's not a fad. <br> #OceanHaul  </p>
 			<a class="button" target="_blank" href="https://medium.com/@oceanhauls">Read blog</a>
 		</section>
 
