--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 	
 	<section id="about">
 			<h1 class="header-black">Join the challenge.</h1>
-			<p class="body-dark"> It's for everyone. <br> #OceanHaul  </p>
+			<p class="body-dark"> It's for everyone. Literally. <br> #OceanHaul  </p>
 			<a class="button" target="_blank" href="https://medium.com/@oceanhauls">Read blog</a>
 		</section>
 
