--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<div class="tagline">
 
 		<h1>#OceanHaul</h1>
-		<p>Challenge</p>
+		<p>Join The Challenge</p>
 		<a class="button" target="_blank" href="https://medium.com/@oceanhauls">Read blog</a>
 
 	</div>
