--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 		  		<div class="small-12 medium-6 large-4 columns">
 		  			<div class="service">
 		  				<img id="#" src="images/service.png" alt="#" title="#">
-		  				<h3>1. Pick up litter</h3>
+		  				<h3>1. Pick it up</h3>
 		  				<p> When you go to the beach or particpate in beach sports pick up the litter your find. <br> It is really that simple. </p>
 		  			</div>
 		  		</div>
@@ -83,7 +83,7 @@
 		  		<div class="small-12 medium-6 large-4 columns">
 		  			<div class="service">
 		  				<img id="#" src="images/service.png" alt="#" title="#">
-		  				<h3>2. Share it</h3>
+		  				<h3>2. Take a photo</h3>
 		  				<p> Share the insane things you find using the hashtag #OceanHaul.  Get creative and spice it up.</p>
 		  			</div>
 		  		</div>
@@ -91,7 +91,7 @@
 		  		<div class="small-12 medium-6 large-4 columns end">
 		  			<div class="service">
 		  				<img id="#" src="images/service.png" alt="#" title="#">
-		  				<h3>3. Dispose of it.</h3>
+		  				<h3>3. Throw it out</h3>
 		  				<p>Find a bin or take the extra step and recycle it. Easy.</p>
 		  			</div>
 		  		</div>
