--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 		<h1>#OceanHaul</h1>
 		<p>Join The Challenge</p>
-		<a class="button" target="_blank" href="https://medium.com/@oceanhauls">Read blog</a>
+		<a class="button" target="_blank" href="https://medium.com/@oceanhauls">Spread the word</a>
 
 	</div>
 
@@ -128,7 +128,7 @@
 	<section id="about">
 			<h1 class="header-black">Join the challenge.</h1>
 			<p class="body-dark"> It's for everyone. Literally. </p>
-			<a class="button" target="_blank" href="https://medium.com/@oceanhauls">Read blog</a>
+			<a class="button" target="_blank" href="https://medium.com/@oceanhauls">Spread the word</a>
 		</section>
 
 		<div id="social-media"> 
