--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 	  		<div class="row">
 	  			<div class="small-12 small-centered">
-					<h1 class="header-black"> How much waste can you find on the beach? </h1>
+					<h1 class="header-black"> How much litter can you find on the beach? </h1>
 					<p class="body-dark">   Share it on social media<br> <b>#oceanhaul</b> </p>
 	  			</div>
 	  		</div>
@@ -83,7 +83,7 @@
 		  			<div class="service">
 		  				<img id="#" src="images/service.png" alt="#" title="#">
 		  				<h3>2. Take a photo</h3>
-		  				<p> Share the insane things you find using the hashtag #OceanHaul.  Get creative and spice it up.</p>
+		  				<p> Share the insane things you find using the hashtag #OceanHaul. Tag the brands you find. </p>
 		  			</div>
 		  		</div>
 
