--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 		  		<div class="small-12 medium-6 large-4 columns end">
 		  			<div class="service">
 		  				<img id="#" src="images/service.png" alt="#" title="#">
-		  				<h3>3. Throw it out</h3>
+		  				<h3>3. Recycle it</h3>
 		  				<p>Find a bin or take the extra step and recycle it. Easy.</p>
 		  			</div>
 		  		</div>
